--- a/data/skill.yaml
+++ b/data/skill.yaml
@@ -2123,3 +2123,330 @@
   tags: []
   effect:
     - effect_skill_add_mark_foe_nishui_30_percent
+- id: skill_penhuo
+  element: Fire
+  category: Special
+  power: 55
+  rage: 5
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_reduce_foe_spa_5_percent
+- id: skill_jiare
+  element: Fire
+  category: Status
+  power: 0
+  rage: 10
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_raise_spa_1_stages
+- id: skill_zhuoshao
+  element: Fire
+  category: Special
+  power: 60
+  rage: 10
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_foe_shaoshang_60_percent
+- id: skill_rongjiezhiyan
+  element: Fire
+  category: Special
+  power: 60
+  rage: 10
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_power_2x_foe_shaoshang
+- id: skill_huoyanchongzhuang
+  element: Fire
+  category: Physical
+  power: 95
+  rage: 15
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_foe_shaoshang_20_percent
+- id: skill_shuangguihuopao
+  element: Fire
+  category: Special
+  power: 35
+  rage: 15
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  multihit: 2
+  tags: []
+  effect:
+    - effect_skill_power_2x_foe_shaoshang
+- id: skill_lieyanzhiju
+  element: Fire
+  category: Status
+  power: 0
+  rage: 15
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_mianyibuliang
+- id: skill_huoyanxuanfeng
+  element: Fire
+  category: Special
+  power: 100
+  rage: 20
+  accuracy: 75
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_sure_hit_foe_shaoshang
+- id: skill_mijisaoshe
+  element: Fire
+  category: Special
+  power: 30
+  rage: 20
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  multihit: [3, 5]
+  tags: []
+- id: skill_chaodahuoqiu
+  element: Fire
+  category: Special
+  power: 110
+  rage: 25
+  accuracy: 90
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_foe_shaoshang_15_percent
+- id: skill_rongyanbaolie
+  element: Fire
+  category: Climax
+  power: 165
+  rage: 100
+  accuracy: 100
+  sureHit: true
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_foe_shaoshang_10_percent
+- id: skill_jisuhuodan
+  element: Fire
+  category: Special
+  power: 50
+  rage: 15
+  accuracy: 95
+  priority: 1
+  sureHit: false
+  ignoreShield: false
+  tags: []
+- id: skill_dianran
+  element: Fire
+  category: Status
+  power: 0
+  rage: 20
+  accuracy: 85
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_foe_shaoshang
+- id: skill_chuantouhuoyan
+  element: Fire
+  category: Special
+  power: 95
+  rage: 15
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_min_damage_95
+- id: skill_fennuzhihuo
+  element: Fire
+  category: Special
+  power: 120
+  rage: 15
+  accuracy: 35
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_sure_hit_foe_below_quarter_hp
+- id: skill_huoqiu
+  element: Fire
+  category: Special
+  power: 55
+  rage: 5
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_reduce_foe_spa_5_percent
+- id: skill_jianying
+  element: Normal
+  category: Status
+  power: 0
+  rage: 10
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_raise_def_1_stages
+- id: skill_zhuangyun
+  element: Normal
+  category: Physical
+  power: 65
+  rage: 10
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_foe_xuanyun
+- id: skill_daliqian
+  element: Normal
+  category: Physical
+  power: 90
+  rage: 15
+  accuracy: 60
+  sureHit: false
+  ignoreShield: false
+  tags: ['require_xuanyun']
+  effect:
+    - effect_skill_sure_hit_foe_xuanyun
+- id: skill_reliqian
+  element: Fire
+  category: Physical
+  power: 80
+  rage: 15
+  accuracy: 60
+  sureHit: false
+  ignoreShield: false
+  tags: ['require_xuanyun']
+  effect:
+    - effect_skill_sure_hit_foe_xuanyun
+- id: skill_huoqulianshe
+  element: Fire
+  category: Special
+  power: 40
+  rage: 15
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  multihit: [2, 3]
+  tags: []
+- id: skill_guailiqian
+  element: Normal
+  category: Physical
+  power: 110
+  rage: 15
+  accuracy: 55
+  sureHit: false
+  ignoreShield: false
+  tags: ['require_xuanyun']
+  effect:
+    - effect_skill_sure_hit_foe_xuanyun
+- id: skill_huoyanqian
+  element: Fire
+  category: Physical
+  power: 100
+  rage: 15
+  accuracy: 55
+  sureHit: false
+  ignoreShield: false
+  tags: ['require_xuanyun']
+  effect:
+    - effect_skill_sure_hit_foe_xuanyun
+- id: skill_juansuo
+  element: Normal
+  category: Status
+  power: 0
+  rage: 15
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_shoudaoshanghaijianshao_50
+- id: skill_huoyantuxi
+  element: Fire
+  category: Special
+  power: 100
+  rage: 15
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_foe_shaoshang_10_percent
+- id: skill_huoyanshazhen
+  element: Fire
+  category: Climax
+  power: 40
+  rage: 100
+  accuracy: 100
+  sureHit: true
+  ignoreShield: false
+  multihit: 4
+  tags: []
+- id: skill_xuli
+  element: Normal
+  category: Status
+  power: 0
+  rage: 15
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_shanghaizengjia_75
+- id: skill_fensuiqian
+  element: Normal
+  category: Physical
+  power: 120
+  rage: 20
+  accuracy: 50
+  sureHit: false
+  ignoreShield: false
+  tags: ['require_xuanyun']
+  effect:
+    - effect_skill_sure_hit_foe_xuanyun
+- id: skill_rongyanqian
+  element: Fire
+  category: Physical
+  power: 110
+  rage: 20
+  accuracy: 50
+  sureHit: false
+  ignoreShield: false
+  tags: ['require_xuanyun']
+  effect:
+    - effect_skill_sure_hit_foe_xuanyun
+- id: skill_xuanyunhuoqiu
+  element: Fire
+  category: Special
+  power: 75
+  rage: 15
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_foe_xuanyun
