--- a/data/mark.yaml
+++ b/data/mark.yaml
@@ -340,6 +340,16 @@
   effect:
     - effect_mark_add_crit_rate_5_percent
 - id: mark_xuanyun
+  config:
+    duration: 5
+    persistent: false
+    maxStacks: 1
+    stackable: true
+    stackStrategy: refresh
+    destroyable: true
+    keepOnSwitchOut: true
+  effect:
+    - effect_mark_reduce_speed_50
 - id: mark_shoudaowulishanghaijianshao
 - id: mark_shoudaoteshushanghaijianban
 - id: mark_mingzhongxiajiang
@@ -548,7 +558,7 @@
   config:
     duration: -1
     persistent: true
-    maxStacks: 1
+    maxStacks: 114514
     stackable: false
     stackStrategy: max
     destroyable: true
@@ -573,6 +583,19 @@
   effect:
     - effect_mark_disabled_xingzhili_effect
 - id: mark_mianyibuliang
+  config:
+    duration: 5
+    persistent: false
+    maxStacks: 1
+    stackable: false
+    stackStrategy: refresh
+    destroyable: true
+    isShield: false
+    keepOnSwitchOut: true
+    transferOnSwitch: false
+    inheritOnFaint: false
+  effect:
+    - effect_mark_immune_status
 - id: mark_shanghaizengjia
   config:
     duration: -1
@@ -685,3 +708,17 @@
     inheritOnFaint: false
   effect:
     - effect_mark_onDestroy_add_mark_shanghaizengjia
+- id: mark_shoudaoshanghaijianshao
+  config:
+    duration: -1
+    persistent: true
+    maxStacks: 114514
+    stackable: false
+    stackStrategy: max
+    destroyable: true
+    isShield: false
+    keepOnSwitchOut: true
+    transferOnSwitch: false
+    inheritOnFaint: false
+  effect:
+    - effect_mark_reduce_damage_taken_once
