--- a/data/mark_global.yaml
+++ b/data/mark_global.yaml
@@ -18,6 +18,8 @@
     - effect_global_power_35_percent_water
 - id: mark_global_yanre
   config: *global_config
+  effect:
+    - effect_global_power_35_percent_fire
 - id: mark_global_baofengxue
   config: *global_config
 - id: mark_global_shachenbao
