--- a/data/effect_emblem.yaml
+++ b/data/effect_emblem.yaml
@@ -288,3 +288,24 @@
     type: setMarkDuration
     target: addMarkContext
     value: 6
+- id: effect_emblem_immune_mark_haipa
+  trigger: OnBeforeAddMark
+  priority: 0
+  condition:
+    type: every
+    conditions:
+      - type: selfBeAddMark
+      - type: evaluate
+        target:
+          base: addMarkContext
+          chain:
+            - type: select
+              arg:
+                type: dynamic
+                arg: baseMark.id
+        evaluator:
+          type: same
+          value: mark_haipa
+  apply:
+    type: disableContext
+    target: addMarkContext
