--- a/data/effect_mark.yaml
+++ b/data/effect_mark.yaml
@@ -1006,3 +1006,67 @@
     statType: spe
     delta: 50
     percent: 0
+- id: effect_mark_amplify_next_physical_damage_with_stack
+  trigger: OnBeforeCalculateDamage
+  condition:
+    type: every
+    conditions:
+      - type: selfUseSkill
+      - type: evaluate
+        target:
+          base: damageContext
+          chain:
+            - type: selectPath
+              arg: damageType
+        evaluator:
+          type: same
+          value: Physical
+  priority: 0
+  apply:
+    - type: addModified
+      target: damageContext
+      percent:
+        type: dynamic
+        selector:
+          base: mark
+          chain:
+            - type: select
+              arg:
+                type: base
+                arg: stack
+      delta: 0
+    - type: destroyMark
+      target:
+        base: mark
+- id: effect_mark_amplify_next_special_damage_with_stack
+  trigger: OnBeforeCalculateDamage
+  condition:
+    type: every
+    conditions:
+      - type: selfUseSkill
+      - type: evaluate
+        target:
+          base: damageContext
+          chain:
+            - type: selectPath
+              arg: damageType
+        evaluator:
+          type: same
+          value: Special
+  priority: 0
+  apply:
+    - type: addModified
+      target: damageContext
+      percent:
+        type: dynamic
+        selector:
+          base: mark
+          chain:
+            - type: select
+              arg:
+                type: base
+                arg: stack
+      delta: 0
+    - type: destroyMark
+      target:
+        base: mark
