--- a/resource/mark_image.yaml
+++ b/resource/mark_image.yaml
@@ -107,3 +107,4 @@ mark_kongqihudun: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/
 mark_fantan: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3006.png'
 mark_shuiwenpingzhang: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/4002.png'
 mark_global_yutian: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/20002.png'
+mark_global_yanre: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/20003.png'
