--- a/packages/web-ui/package.json
+++ b/packages/web-ui/package.json
@@ -35,9 +35,11 @@
     "@faker-js/faker": "^9.7.0",
     "@tailwindcss/vite": "^4.1.6",
     "@vueuse/core": "^13.1.0",
+    "@vueuse/sound": "^2.1.3",
     "axios": "^1.9.0",
     "element-plus": "^2.9.10",
     "gsap": "^3.13.0",
+    "howler": "^2.2.4",
     "i18next": "^25.1.2",
     "i18next-chained-backend": "^4.6.2",
     "i18next-http-backend": "^3.0.2",
@@ -67,6 +69,7 @@
     "@storybook/vue3": "^8.6.12",
     "@storybook/vue3-vite": "^8.6.12",
     "@tsconfig/node22": "^22.0.1",
+    "@types/howler": "^2.2.12",
     "@types/markdown-it": "^14.1.2",
     "@types/node": "^22.15.17",
     "@vitejs/plugin-vue": "^5.2.4",
