chore: build and watch script

--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
   "scripts": {
     "build": "run-s build:package build:cli",
     "watch": "run-p watch:package watch:cli",
-    "clean": "run-p clean:package clean:cli",
+    "clear": "run-p clear:package clear:cli",
     "build:package": "pnpm --filter \"./packages/**\" --filter=!@arcadia-eternity/web-ui run build",
     "watch:package": "pnpm --filter \"./packages/**\" --filter=!@arcadia-eternity/web-ui --parallel run watch",
-    "clean:package": "pnpm --filter \"./packages/**\" --filter=!@arcadia-eternity/web-ui run clean",
+    "clear:package": "pnpm --filter \"./packages/**\" --filter=!@arcadia-eternity/web-ui run clear",
     "build:cli": "rollup -c",
     "watch:cli": "rollup -c --watch",
-    "clean:cli": "rm -rf dist",
+    "clear:cli": "rm -rf dist",
     "generate": "pnpm --filter @arcadia-eternity/schema run generate",
     "generate:csbind": "tsx packages/csbind/script/generate.ts",
     "cli": "tsx ./bin/cli.ts",
